Fix details svg border overlapping on firefox

--- a/assets/stylesheets/pages/_details.scss
+++ b/assets/stylesheets/pages/_details.scss
@@ -41,7 +41,8 @@
 	margin-bottom: 4rem;
 
 	background-image: image('bg-wave--4.svg');
-	background-position: center bottom;
+	background-position: 50% 101%;
+	background-size: 101% auto;
 	background-color: $_blue--opacity;
 }
 
